Edited wiki page UserStory through web user interface.

--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -3,7 +3,16 @@
 
 = Introduction =
 
-Add your content here.
+"O Sistema de Memorandos On-Line deverá permitir que os usuários possam enviar comunicados<br>, pareceres, solicitações e informativos com segurança, em tempo real, sem necessidade do uso de papel. Deve ser possível localizar um memorando enviado, saber qual foi o roteiro por ele percorrido e todos os despachos que foram adicionados.<br>Recursos como moderação de conteúdo, avisos por e-mail, mensagens de cobrança, transferência de arquivos anexados e agendamento de ausências complementam a eficiência do sistema." 
+
+Funcionalidades: 
+      - Memorandos individuais e circulares;<br> 
+      - Caixa Postal individual com busca;<br> 
+      - Agendamento de ausências;<br> 
+      - Transferência de arquivos;<br>
+      - Notificações por e-mail;<br> 
+
+
 
 
 = Details =
