--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -19,26 +19,26 @@
 
 
 <b>Autenticação e controle:</b>
-- Login com autenticação (se possível, recuperar senha pelo e-mail);
-- Cadastro de usuário;
+      - Login com autenticação (se possível, recuperar senha pelo e-mail);
+      - Cadastro de usuário;
 
 <b>Tela Inicial:</b>
-- Criar Memorandos, Oficios, Requerimentos no formato PDF (permitir que o usuário possa criar seu próprio documento, usando a estrutura desejada);
-- Localizar os Memorando enviados, identificando a rota percorrida pelo mesmo e os despachos que foram adicionados;
-- Enviar Mensagens;
+      - Criar Memorandos, Oficios, Requerimentos no formato PDF (permitir que o usuário possa criar seu próprio documento, usando a estrutura desejada);
+      - Localizar os Memorando enviados, identificando a rota percorrida pelo mesmo e os despachos que foram adicionados;
+      - Enviar Mensagens;
 
 <b>Tramitação do processo:</b>
-- Escolher tipo de memorando: individual ou circular;
-- Criação de memorando: Destinatário, Assunto e descrição, arquivos anexos, conferência, número protocolo automático;
-- Moderação: Alerta de Memorandos Pendentes, Aprovação, Devolução.
-- Tramite Interno: Caixa Postal com sistema de busca, despachos, mensagens de alerta, notificações por e-mail;
-- Arquivamento: Automático para memorandos circulares; manual para memorandos individuais;
+      - Escolher tipo de memorando: individual ou circular;
+      - Criação de memorando: Destinatário, Assunto e descrição, arquivos anexos, conferência, número protocolo automático;
+      - Moderação: Alerta de Memorandos Pendentes, Aprovação, Devolução.
+      - Tramite Interno: Caixa Postal com sistema de busca, despachos, mensagens de       alerta, notificações por e-mail;
+      - Arquivamento: Automático para memorandos circulares; manual para memorandos individuais;
 
-<b>Recursos adicionais:</b>
-- Avisos por e-mail;<br>
-- Mensagens de cobrança;<br>
-- Transferência de Arquivos Anexados;<br>
-- Agendamento de Ausências; <br>
+<b>Recursos adicionais:</b><br>
+      - Avisos por e-mail;<br>
+      - Mensagens de cobrança;<br>
+      - Transferência de Arquivos Anexados;<br>
+      - Agendamento de Ausências; <br>
 
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
