Edited wiki page Staff through web user interface.

--- a/wiki/Staff.wiki
+++ b/wiki/Staff.wiki
@@ -2,7 +2,12 @@
 
 = Introduction =
 
-Add your content here.
+Orientador:
+Leonardo Mendes
+
+Desenvolvedores:
+Arnaldo de Sena Santos arnaldoufcg@gmail.com
+Claudia Stevam
 
 
 = Details =
