--- a/wiki/RequisitosFuncionais.wiki
+++ b/wiki/RequisitosFuncionais.wiki
@@ -23,3 +23,13 @@ Descrevemos aqui os requisitos funcionais.
 ||RF05 ||Cadastro de Setores ||O administrador do sistema deverá cadastrar os setores de acordo com a identificação de cada um. Siglas, nomes e descrição são dados excessiais para identificação. ||Alta ||
 ||RF06 ||Desativação de Setores ||O administrador quando autorizado poderá desativar o setor sem excluí-lo, pois os documento destinados a este setor deverá ser mantido. Entretando não deverá existir nenhum funcionário alocado neste||Alta ||
 ||RF07 ||Exclusão de Setores ||O administrador quando autorizado poderá excluir o setor caso não haja nenhum documento destinado a ele, assim como usuários cadastrados neste.||Alta ||
+
+----
+=Gerenciamento de Documentos=
+==Requisitos necessários para gerenciamento de documentos==
+||RF08 ||Criação de Documentos ||O usuário deverá informar título, descrição e tipo de documento (memorando individuais e circulares) e em seguida irá anexar um documento como planilha,  texto e slides.  ||Alta ||
+||RF09 ||Encaminhamento de documentos || Para qual(is) destino(s) segue o documento.||Alta ||
+||RF10 ||Recebimento de Documentos ||O usuários ao acessar o sistema deverá ser notificado da existência de documentos pendentes. ||Alta ||
+||RF11 ||Pendências de Recebimento ||O usuário que enviou um documento poderá verificar se este foi lido pelo destinatário(s) ou não ||Alta ||
+||RF12 ||Pesquisa de Documentos ||O usuário poderá pesquisar um documento que lhe foi enviado ou por ele enviado. ||Alta ||
+||RF13 ||Histórico de Documentos||O sistema guardará todos os documentos criados. Estes serão sigilosos e acessados por seus responsáveis ||Alta ||
