--- a/wiki/RequisitosFuncionais.wiki
+++ b/wiki/RequisitosFuncionais.wiki
@@ -32,7 +32,7 @@
 
 =Gerenciamento de Documentos=
 ==Requisitos necessários para gerenciamento de documentos==
-||RF08 ||Criação de Documentos ||O usuário deverá informar título, descrição e tipo de documento (memorando individuais e circulares) e em seguida irá anexar um documento como planilha,  texto e slides.  ||Alta ||
+||RF08 ||Criação de Documentos ||O usuário deverá informar a identificação (número do protocolo), título, descrição e tipo de documento (memorando individuais e circulares) e em seguida irá anexar um documento como planilha,  texto e slides.  ||Alta ||
 ||RF09 ||Encaminhamento de documentos || Para qual(is) destino(s) segue o documento.||Alta ||
 ||RF10 ||Recebimento de Documentos ||O usuários ao acessar o sistema deverá ser notificado da existência de documentos pendentes. ||Alta ||
 ||RF11 ||Pendências de Recebimento ||O usuário que enviou um documento poderá verificar se este foi lido pelo destinatário(s) ou não ||Alta ||
