--- a/wiki/RequisitosNaoFuncionais.wiki
+++ b/wiki/RequisitosNaoFuncionais.wiki
@@ -12,5 +12,5 @@ Requisitos não funcionais levantados pelo cliente
 ||RNF02 ||Confiabilidade ||O documento enviado é confidencial e deve chegar apenas ao destino desejado||Essencial ||
 ||RNF03 ||Disponibilidade ||O sistema ficará disponível 24h por dia e 7 dias na semana ||Essencial ||
 ||RNF04 ||Segurança ||O sistema deve prover acesso seguro via rede com uso de protocolos de segurança como https e os dados devem ser criptografados ||Essencial ||
-||RNF || || || ||
-||RNF || || || ||
+||RNF05 ||Portabilidade ||O sistema desenvolvido será independente do SO.||Essencial ||
+||RNF06 ||Tempo de resposta ||Definição do limite carga de requisições simultâneas apartir do tempo médio estimado de cada solicitação. Para isso devemos ter dados do tempo de tráfego da rede, controle de fluxo e de congestionamento ||Essencial ||
