--- a/wiki/RequisitosNaoFuncionais.wiki
+++ b/wiki/RequisitosNaoFuncionais.wiki
@@ -21,7 +21,7 @@ Requisitos não funcionais levantados pelo cliente
 = Requisitos do Produto =
 
 ||RNF ||Descrição ||Resumo ||Prioridade ||
-||RNF07 ||Padrão de Desenvolvimento ||A arquitetura do sistema segue o padrão MVC e será utilizado UML 2.0 para geração de diagramas referentes ao sistemas nas sua mais diversas visões (Logical, Implementation, Process, Use-Case, Deployment). Como ferramenta de desenvolvimento de código utilizaremos o framework open source Grails com uso de linguagem Groovy e Java2EE e banco de dados MySQL.  ||Essencial ||
+||RNF07 ||Padrão de Desenvolvimento ||A arquitetura do sistema segue o padrão MVC e será utilizado UML 2.0 para geração de diagramas referentes ao sistemas nas sua mais diversas visões (Logical, Implementation, Process, Use-Case, Deployment). Como ferramenta de desenvolvimento de código utilizaremos o framework open source [http://www.grails.org/ Grails] com uso de linguagem Groovy e Java2EE e banco de dados MySQL.  ||Essencial ||
 ||RNF08 ||Processo de Desenvolvimento ||Será adotado o processo de desenvolvimento [http://www.dsc.ufcg.edu.br/~jacques/cursos/2002.2/projii/xp1/xp1.html XP1] por ser ágil. Requisito importante para o sucesso do Projeto. ||Essencial ||
 ||RNF || || || ||
 ||RNF || || || ||
