Edited wiki page RequisitosNaoFuncionais through web user interface.

--- a/wiki/RequisitosNaoFuncionais.wiki
+++ b/wiki/RequisitosNaoFuncionais.wiki
@@ -22,6 +22,6 @@ Requisitos não funcionais levantados pelo cliente
 
 ||RNF ||Descrição ||Resumo ||Prioridade ||
 ||RNF07 ||Padrão de Desenvolvimento ||A arquitetura do sistema segue o padrão MVC e será utilizado UML 2.0 para geração de diagramas referentes ao sistemas nas sua mais diversas visões (Logical, Implementation, Process, Use-Case, Deployment). Como ferramenta de desenvolvimento de código utilizaremos o framework open source [http://www.grails.org/ Grails] com uso de linguagens Groovy e Java2EE e banco de dados MySQL.  ||Essencial ||
-||RNF08 ||Processo de Desenvolvimento ||Será adotado o processo de desenvolvimento [http://www.dsc.ufcg.edu.br/~jacques/cursos/2002.2/projii/xp1/xp1.html XP1] por ser ágil. Maiores detalhes pode ser adquidos no site do [http://www.dsc.ufcg.edu.br/~garcia/cursos/ProjetoI/ Projeto I] da professora Dra. Francilene Garcia  ||Essencial ||
+||RNF08 ||Processo de Desenvolvimento ||Será adotado o processo de desenvolvimento [http://www.dsc.ufcg.edu.br/~jacques/cursos/2002.2/projii/xp1/xp1.html XP1] por ser ágil. Maiores detalhes podem ser adquidos no site do [http://www.dsc.ufcg.edu.br/~garcia/cursos/ProjetoI/ Projeto I] da professora Dra. Francilene Garcia  ||Essencial ||
 ||RNF09 || || || ||
 ||RNF || || || ||
