--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -40,4 +40,10 @@
       - Transferência de Arquivos Anexados;<br>
       - Agendamento de Ausências; <br>
 
-||User Stories||Descricao||Tarefa||Iteracao||Prioridade || Tempo||
+||US||Tarefa||Descricao||Iteracao||Prioridade || Tempo||
+||US ||TA || || || || ||
+||US ||TA || || || || ||
+||US ||TA || || || || ||
+||US ||TA || || || || ||
+||US ||TA || || || || ||
+||US ||TA || || || || ||
