--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -47,7 +47,7 @@
 
 ----
 <br>
-== Preparação do ambiente de desenvolvimento == 
+== US1 - Preparação do ambiente de desenvolvimento == 
 <br>
 == SGDB MySQL, servidor web java Apache Tomcat e repositório de código Google code (SVN)==
 ||<b>US</b>||<b>Tarefa</b>||<b>Descricao</b>||<b>Iteracao</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
@@ -56,9 +56,15 @@
 ||US01 ||TA03 ||Instalação e configuração do Apache Tomcat || ||Essencial ||1h || ||
 ||US01 ||TA04 ||Cadastramento dos usuários do Tomcat || || || || ||
 ||US01 ||TA05 ||Criação da página do projeto no Google Code || ||Desejável ||1h ||0.5h ||
-
-
-||US01 ||TA06 ||Criar e povoar o banco de dados de testes|| ||Desejável ||4h || ||
-||US ||TA ||Criação de _domains classes_ contidos no modelo || ||Essencial ||2h || ||
-||US ||TA || || || || || ||
-||US ||TA || || || || || ||
+||US01 ||TA06 ||Estimar tempo de envio e recebimento de dados na rede|| ||Essencial ||1h || ||
+<br>
+== US2 - Sistema de autenticação
+||<b>US</b>||<b>Tarefa</b>||<b>Descricao</b>||<b>Iteracao</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
+||US02 ||TA07 ||Criar e povoar o banco de dados de testes|| ||Desejável ||4h || ||
+||US02 ||TA08 ||Criação das _domains classes_ contidas no modelo || ||Essencial ||2h || ||
+||US02 ||TA09 ||Configurar tipos de usuários || ||Essencial ||1h || ||
+||US02 ||TA10 ||Configurar tipos de documentos || ||Essencial ||1h || ||
+||US02 ||TA10 ||Implementar algoritmo de criptografia de dados || || || || ||
+||US02 ||TA11 || || || || || ||
+||US02 ||TA12 ||Criar tipos de documentos || || || || ||
+Criar um mecanismo de ajuda para os usuários que esqueceram a senha
