Edited wiki page Artefatos through web user interface.

--- a/wiki/Artefatos.wiki
+++ b/wiki/Artefatos.wiki
@@ -9,4 +9,4 @@ Add your content here.
 
 [UserStory]
 
-http://memorandos.googlecode.com/files/grails memorando.JPG
+http://memorandos.googlecode.com/files/Grails Framework.JPG
