--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -57,7 +57,7 @@
 ||US01 ||TA01 ||Instalação e configuração do MySQL no servidor da instituição || ||Essencial ||1h || ||
 ||US01 ||TA02 ||Cadastramento dos usuários no MySQL || ||Essencial ||1h || ||
 ||US01 ||TA03 ||Instalação e configuração do Apache Tomcat || ||Essencial ||1h || ||
-||US01 ||TA04 ||Cadastramento dos usuários do Tomcat || || || || ||
+||US01 ||TA04 ||Cadastramento dos usuários do Tomcat || ||1h ||Essencial || ||
 ||US01 ||TA05 ||Criação da página do projeto no Google Code || ||Desejável ||1h ||0.5h ||
 ||US01 ||TA06 ||Estimar tempo de envio e recebimento de dados na rede|| ||Essencial ||1h || ||
 
@@ -72,8 +72,8 @@
 ||US02 ||TA08 ||Criação das _domains classes_ contidas no modelo || ||Essencial ||2h || ||
 ||US02 ||TA09 ||Configurar tipos de usuários || ||Essencial ||1h || ||
 ||US02 ||TA10 ||Configurar tipos de documentos || ||Essencial ||1h || ||
-||US02 ||TA10 ||Implementar algoritmo de criptografia de dados || || || || ||
-||US02 ||TA11 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha || || ||2h || ||
+||US02 ||TA10 ||Implementar algoritmo de criptografia de dados || ||Essencial || || ||
+||US02 ||TA11 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||Desejável || ||2h || ||
 ||US02 ||TA12 ||Formatação dos campos de login || ||Desejável ||2h || ||
 ||US02 ||TA13 ||Criação da página de login (view)|| ||Essencial ||2h || ||
 ||US02 ||TA14 ||Tratamento de erros de login || ||Essencial ||2h || ||
