--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -72,7 +72,7 @@
 ||US02 ||TA08 ||Criação das _domains classes_ contidas no modelo || ||Essencial ||2h || ||
 ||US02 ||TA09 ||Configurar tipos de usuários || ||Essencial ||1h || ||
 ||US02 ||TA10 ||Configurar tipos de documentos || ||Essencial ||1h || ||
-||US02 ||TA10 ||Implementar algoritmo de criptografia de dados || ||Essencial || || ||
+||US02 ||TA10 ||Implementar algoritmo de criptografia de dados || ||Essencial ||2h || ||
 ||US02 ||TA11 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha || ||Desejável ||2h || ||
 ||US02 ||TA12 ||Formatação dos campos de login || ||Desejável ||2h || ||
 ||US02 ||TA13 ||Criação da página de login (view)|| ||Essencial ||2h || ||
