Edited wiki page UserStory through web user interface.

--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -46,7 +46,10 @@
 ----
 <br>
 
-== US1 - Preparação do ambiente de desenvolvimento == 
+== US1 ==
+
+<br>
+<h2>Preparação do ambiente de desenvolvimento</h2>
 
 <br>
 
