Edited wiki page UserStory through web user interface.

--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -87,14 +87,22 @@
 <h2> Intranet </h2>
 <br>
 ||<b>US</b>||<b>Tarefa</b>||<b>Descricao</b>||<b>Iteracao</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US3||TA||Implementar tela inicial do sistema ||||Essencial ||2h || ||
-||US3||TA||Implementar tela de Agendamento de Ausência (view)||||Essencial ||2h || ||
-||US3||TA||Implementar modelo de Agendamento de Asência ||||Essencial ||4h || ||
-||US3||TA||Implementar controle de Agendamento de Asência ||||Essencial ||4h || ||
+||US3||TA||Implementar tela de Agendamento de Ausência (view)|| ||Essencial ||2h || ||
+||US3||TA||Implementar modelo de Agendamento de Asência || ||Essencial ||4h || ||
+||US3||TA||Implementar controle de Agendamento de Asência || ||Essencial ||4h || ||
 
-||US3||TA||Implementar tela Alteração de Senha (view)||||Essencial ||2h || ||
-||US3||TA||Implementar modelo para Alteração de Senha||||Essencial ||2h || ||
-||US3||TA||Implementar controle para Alteração de Senha||||Essencial ||2h || ||
+||US3||TA||Implementar tela Alteração de Senha (view)|| ||Essencial ||2h || ||
+||US3||TA||Implementar modelo para Alteração de Senha|| ||Essencial ||2h || ||
+||US3||TA||Implementar controle para Alteração de Senha|| ||Essencial ||2h || ||
 
 ||US3||TA||Implementar tela de Agendamento de Ausência (view)||||Essencial ||2h || ||
 ||US3||TA||Implementar tela de Agendamento de Ausência (view)||||Essencial ||2h || ||
+
+<br>
+ ----
+
+<br>
+==US4==
+<br>
+<h2>Tela inicial</h2>
+||US4||TA||Implementar tela inicial do sistema ||||Essencial ||2h || ||
