--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -52,10 +52,10 @@
 <br>
 
 <h2> Estudos de ferramentas relevantes ao projeto  </h2>
-<br>
+
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>Iteração</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US0 ||TA00 ||Estudar o framework Grails e liguagem Groovy. Revisar UML|| ||Essencial ||12h || ||
+||US0 ||TA00 ||Estudar o framework Grails e liguagem Groovy.<br> Revisar UML|| ||Essencial ||12h || ||
 
 
 <br>
