Edited wiki page UserStory through web user interface.

--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -55,7 +55,7 @@
 
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>Iteração</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US0 ||TA00 || # Estudar o framework Grails e liguagem Groovy.<br> * #Revisar UML|| ||Essencial ||12h || ||
+||US0 ||TA00 || - Estudar o framework Grails e liguagem Groovy.<br> - Revisar UML|| ||Essencial ||12h || ||
 
 
 <br>
