--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -72,7 +72,7 @@
 ||US01 ||TA04 ||Cadastramento dos usuários do Tomcat || ||Essencial ||1h || ||
 ||US01 ||TA05 ||Criação da página do projeto no Google Code || ||Desejável ||1h ||0.5h ||
 ||US01 ||TA06 ||Estimar tempo de envio e recebimento de dados na rede|| ||Essencial ||1h || ||
-||US01 ||Ter acesso ao diretório do cliente onde será instalado o programa. Releases.|| ||Essencial ||1h || ||
+||US01 ||TA07 ||Ter acesso ao diretório do cliente onde será instalado o programa. Releases.||Essencial ||1h || ||
 
 <br>
 
@@ -81,16 +81,16 @@
 <h2>Sistema de autenticação</h2>
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descricao</b>||<b>Iteracao</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US02 ||TA07 ||Criar e povoar o banco de dados de testes|| ||Desejável ||4h || ||
-||US02 ||TA08 ||Criação das _domains classes_ contidas no modelo || ||Essencial ||2h || ||
-||US02 ||TA09 ||Configurar tipos de usuários || ||Essencial ||1h || ||
-||US02 ||TA10 ||Configurar tipos de documentos || ||Essencial ||1h || ||
-||US02 ||TA10 ||Implementar algoritmo de criptografia de dados || ||Essencial ||2h || ||
-||US02 ||TA11 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha || ||Desejável ||2h || ||
-||US02 ||TA12 ||Formatação dos campos de login|| ||Desejável ||2h || ||
-||US02 ||TA13 ||Criação da página de login (view)|| ||Essencial ||2h || ||
-||US02 ||TA14 ||Tratamento de erros de login|| ||Essencial ||2h || ||
-||US02 ||TA15 ||Implementar sistema de login/logout do usuário|| ||Essencial ||2h || ||
+||US02 ||TA08 ||Criar e povoar o banco de dados de testes|| ||Desejável ||4h || ||
+||US02 ||TA09 ||Criação das _domains classes_ contidas no modelo || ||Essencial ||2h || ||
+||US02 ||TA10 ||Configurar tipos de usuários || ||Essencial ||1h || ||
+||US02 ||TA11 ||Configurar tipos de documentos || ||Essencial ||1h || ||
+||US02 ||TA12 ||Implementar algoritmo de criptografia de dados || ||Essencial ||2h || ||
+||US02 ||TA13 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha || ||Desejável ||2h || ||
+||US02 ||TA14 ||Formatação dos campos de login|| ||Desejável ||2h || ||
+||US02 ||TA15 ||Criação da página de login (view)|| ||Essencial ||2h || ||
+||US02 ||TA16 ||Tratamento de erros de login|| ||Essencial ||2h || ||
+||US02 ||TA17 ||Implementar sistema de login/logout do usuário|| ||Essencial ||2h || ||
 
 <br>
 
@@ -102,12 +102,12 @@
 
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descricao</b>||<b>Iteracao</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US3||TA16||Implementar tela de Agendamento de Ausência (view)|| ||Essencial ||2h || ||
-||US3||TA17||Implementar modelo de Agendamento de Asência || ||Essencial ||4h || ||
-||US3||TA18||Implementar controle de Agendamento de Asência || ||Essencial ||4h || ||
-||US3||TA19||Implementar tela Alteração de Senha (view)|| ||Essencial ||2h || ||
-||US3||TA20||Implementar modelo para Alteração de Senha|| ||Essencial ||2h || ||
-||US3||TA21||Implementar controle para Alteração de Senha|| ||Essencial ||2h || ||
+||US3||TA18||Implementar tela de Agendamento de Ausência (view)|| ||Essencial ||2h || ||
+||US3||TA19||Implementar modelo de Agendamento de Asência || ||Essencial ||4h || ||
+||US3||TA20||Implementar controle de Agendamento de Asência || ||Essencial ||4h || ||
+||US3||TA21||Implementar tela Alteração de Senha (view)|| ||Essencial ||2h || ||
+||US3||TA22||Implementar modelo para Alteração de Senha|| ||Essencial ||2h || ||
+||US3||TA23||Implementar controle para Alteração de Senha|| ||Essencial ||2h || ||
 
 <br>
 
