--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -47,7 +47,7 @@
 
 <br>
 
-==US0==
+==US00==
 
 <br>
 
@@ -55,12 +55,12 @@
 
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>Iteração</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US0 ||TA00 || - Estudar o framework Grails e liguagem Groovy.<br> - Revisar UML<br> - Revisar Design Patterner|| ||Essencial ||24h || ||
+||US00 ||TA00 || - Estudar o framework Grails e liguagem Groovy.<br> - Revisar UML<br> - Revisar Design Patterner|| ||Essencial ||24h || ||
 
 
 <br>
 
-==US1==
+==US01==
 
 <h2>Preparação do ambiente de desenvolvimento</h2>
 
@@ -76,7 +76,7 @@
 
 <br>
 
-==US2==
+==US02==
 
 <h2>Sistema de autenticação</h2>
 
@@ -94,7 +94,7 @@
 
 <br>
 
-==US3==
+==US03==
 
 <br>
 
@@ -111,31 +111,29 @@
 
 <br>
 
-==US4==
+==US04==
 
 <br>
 
 <h2>Tela inicial</h2>
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>Iteração</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US4||TA||Implementar tela inicial do sistema com informações de:<br>-Criar memorandos, Ofícios;<br>-Localizar Memorandos (enviados, sua rota percorrida e despachos adicionados);  || ||Essencial ||2h || ||
-||US4||TA||Implementar controle para Criar memorandos|| ||Essencial ||4h || ||
-||US4||TA||Implementar modelo para Criar memorandos|| ||Essencial ||4h || ||
-||US4||TA||Implementar controle para Localizar Memorandos|| ||Essencial ||4h || ||
-||US4||TA||Implementar modelo para Localizar Memorandos|| ||Essencial ||4h || ||
+||US04||TA||Implementar tela inicial do sistema com informações de:<br>-Criar memorandos, Ofícios;<br>-Localizar Memorandos (enviados, sua rota percorrida e despachos adicionados);  || ||Essencial ||2h || ||
+||US04||TA||Implementar controle para Criar memorandos|| ||Essencial ||4h || ||
+||US04||TA||Implementar modelo para Criar memorandos|| ||Essencial ||4h || ||
+||US04||TA||Implementar controle para Localizar Memorandos|| ||Essencial ||4h || ||
+||US04||TA||Implementar modelo para Localizar Memorandos|| ||Essencial ||4h || ||
 
 <br>
 
-==US5==
+==US05==
 
 <br>
 
 <h2>Tramitação do processo</h2>
 
 ||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>Iteração</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
-||US||TA||Implementar memorandos: individual ou circular; || ||Essencial ||4h || ||
-||US||TA||Implementar criação de memorando: destinatário, assunto e descrição, arquivos anexos, conferência, número protocolo automático|| ||Essencial ||4h || ||
-||US||TA||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação, Devolução  || ||Essencial ||8h || ||
-||US||TA||Implementar Trâmite Interno: Caixa Postal com sistema de busca, despachos, mensagens de alerta, notificações por e-mail  || ||Essencial ||8h || ||
-
-
+||US05||TA||Implementar memorandos: individual ou circular; || ||Essencial ||4h || ||
+||US05||TA||Implementar criação de memorando: destinatário, assunto e descrição, arquivos anexos, conferência, número protocolo automático|| ||Essencial ||4h || ||
+||US05||TA||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação, Devolução  || ||Essencial ||8h || ||
+||US05||TA||Implementar Trâmite Interno: Caixa Postal com sistema de busca, despachos, mensagens de alerta, notificações por e-mail  || ||Essencial ||8h || ||
