Edited wiki page UserStory through web user interface.

--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -138,3 +138,15 @@
 ||US05||TA||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação, Devolução  || ||Essencial ||8h || ||
 ||US05||TA||Implementar Trâmite Interno: Caixa Postal com sistema de busca, despachos, mensagens de alerta, notificações por e-mail  || ||Essencial ||8h || ||
 ||US05||TA||Implementar Arquivamento: automático para memorandos circulares; manual para memorandos individuais|| ||Essencial ||8h || ||
+
+<br>
+
+==US06==
+
+<br>
+
+<h2>Recursos adicionais</h2>
+
+||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>Iteração</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||
+||US06||TA||Implementar Avisos que serão enviados automaticamente por e-mail|| ||Essencial ||8h || ||
+||US06||TA||Implementar Mensagem de Cobrança (visa cobrar o que já foi pedido anteriormente)|| ||Essencial ||8h || ||
